--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electron</title>
-    <link rel="stylesheet" href="./src/css//output.css">
+    <link rel="stylesheet" href="./src/css/output.css">
 </head>
 <body>
     <h1>Hello, from my ElectronJS App</h1>
