--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hello, from my ElectronJS App</h1>
     <p id="info"></p>
+    <button id="new_file">New File</button>
 </body>
 <script src="./renderer.js"></script>
 </html>
